# CppConfHelloWorld

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.travis/: install.sh
include/: hello.hpp
src/: hello.cpp
test_package/: CMakeLists.txt  TestHello.cpp  conanfile.py
